--- a/static/src/components/projects/scss/00-projects.scss
+++ b/static/src/components/projects/scss/00-projects.scss
@@ -11,7 +11,6 @@
 }
 
 /// * animation * ///
-//// detail-opening
     // background color
     article {
         transition: background 1200ms cubic-bezier(0.390, 0.575, 0.565, 1.000);
@@ -101,8 +100,6 @@
             }
         }
     }
-
-//// detail-closing
 
 /// -------- overview ---------- ///
     .detail-only {
@@ -596,7 +593,10 @@
         }
 //// detail: lines
         .lines {
-
+            span.horizontal.top, span.horizontal.bottom,
+            span.vertical.left, span.vertical.right {
+                border-color: $line-color-light;
+            }
             &.horizontal-lines {
                 // position: fixed;
             }
@@ -656,8 +656,11 @@
                 }
             }
 
-            .info.project {
-                margin-top: 620px;
+            .info{
+                &.project {
+                    position: absolute;
+                    top: 620px;
+                }
             }
         }
     }
